fixed long overflowing titles in detailview
--HG--
branch : socialitems

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -2651,6 +2651,7 @@ div.wide.form{
         #gradient > .vertical(#f6f6f6, #ededed);
         .b-shadow(inset 0 1px 0 0 #ffffff);
         border-bottom:1px solid #ccc;
+        overflow: hidden;
     }
     p{
         font-size:10px;
